aks/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: v1
kind: Namespace
metadata:
    name: api
---
apiVersion: v1
kind: Namespace
metadata:
    name: secrets
