aks/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    run: poi
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: poi  
  template:
    metadata:      
      labels:
        run: poi
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/poi:1.0
        name: poi
