aks/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tripviewer
  namespace: web
  name: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/tripviewer:1.0
        name: tripviewer
