aks/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    run: user-java
  name: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      run: user-java  
  template:
    metadata:      
      labels:
        run: user-java
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/user-java:1.0
        name: user-java
