aks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
    name: team1-web-ingress
    namespace: web
spec:
    rules:
        - host: team1aks.northeurope.cloudapp.azure.com
          http:
            paths:
            - backend:
                serviceName: tripviewer-service
                servicePort: 80
              path: /
# This section is only required if TLS is to be enabled for the Ingress
# tls:
#     - hosts:
#         - www.example.com
#         secretName: example-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
    name: team1-api-ingress
    namespace: api
spec:
    rules:
        - host: team1aks.northeurope.cloudapp.azure.com
          http:
            paths:
            - backend:
                serviceName: trips-service
                servicePort: 80
              path: /api/trips
            - backend:
                serviceName: userprofile
                servicePort: 80
              path: /api/user
            - backend:
                serviceName: user-java-service
                servicePort: 80
              path: /api/user-java
            - backend:
                serviceName: poi-service
                servicePort: 80
              path: /api/poi
